レスポンシブ対応へ

--- a/index.html
+++ b/index.html
@@ -297,6 +297,119 @@
         </nav>
       </article>
 
+      <nav class="relations-type-b">
+        <ul class="flex">
+          <li class="flex-1">
+            <a href="URL">
+              <p><img src="img/grid-img/1.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>IR</dt>
+                  <dd>IR情報</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-2">
+            <a href="URL">
+              <p><img src="img/grid-img/2.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>IR News</dt>
+                  <dd>IRニュース</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-3">
+            <a href="URL">
+              <p><img src="img/grid-img/3.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>IR Calendar</dt>
+                  <dd>IRカレンダー</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-4">
+            <a href="URL">
+              <p><img src="img/grid-img/4.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>IR Library</dt>
+                  <dd>IRライブラリ</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-5">
+            <a href="URL">
+              <p><img src="img/grid-img/5.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>Performance</dt>
+                  <dd>業績ハイライト</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-6">
+            <a href="URL">
+              <p><img src="img/grid-img/6.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>Chart</dt>
+                  <dd>株価チャート</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-7">
+            <a href="URL">
+              <p><img src="img/grid-img/7.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>Stock Information</dt>
+                  <dd>株式情報</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li class="flex-8">
+            <a href="URL">
+              <p><img src="img/grid-img/8.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>Electronic Public Notice</dt>
+                  <dd>電子公告</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+          <li >
+            <a href="URL">
+              <p><img src="img/grid-img/9.jpg" alt=""></p>
+              <div>
+                <dl>
+                  <dt>Anual Meeting</dt>
+                  <dd>株主総会</dd>
+                </dl>
+                <p>&#8594;</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
       <section class="recruit-sec">
         <hgroup class="recruit-title">
           <h2>Recruit</h2>
@@ -432,7 +545,7 @@
           <dd>
             <p><a href="URL">IRニュース</a></p>
             <p><a href="URL">IRライブラリ</a></p>
-              <div>
+              <div id="f-grid-5-div1">
                 <p><a href="URL">決算短信</a></p>
                 <p><a href="URL">決算説明会</a></p>
                 <p><a href="URL">有価証券報告書等</a></p>
@@ -444,7 +557,7 @@
             <p><a href="URL">株式情報</a></p>
             <p><a href="URL">株主還元</a></p>
             <p><a href="URL">電子公告</a></p>
-              <div>
+              <div id="f-grid-5-div2">
                 <p><a href="URL">グループ会社決算公告</a></p>
               </div>
             <p><a href="URL">株主総会</a></p>
